...
                </View>
              );
            })}
          </View>

          <TextInput
            testID="otp-input"
            ref={inputRef}
            value={code}
            onChangeText={onChange}
            onFocus={() => setFocused(true)}
            onBlur={() => setFocused(false)}
            keyboardType="number-pad"
...
