...
export interface Region {
  name: string;
  districts: string[];
}

export const REGIONS: Region[] = [
  { name: 'Toshkent shahri', districts: ['Bektemir', 'Chilonzor', 'Mirobod', 'Mirzo Ulug‘bek', 'Olmazor', 'Sergeli', 'Shayxontohur', 'Uchtepa', 'Yakkasaroy', 'Yashnobod', 'Yunusobod'] },
  { name: 'Toshkent viloyati', districts: ['Angren', 'Bekobod', 'Bo‘ka', 'Chirchiq', 'Ohangaron', 'Parkent', 'Piskent', 'Yangiyo‘l', 'Zangiota'] },
  { name: 'Andijon', districts: ['Andijon sh.', 'Asaka', 'Baliqchi', 'Xonobod', 'Marhamat', 'Shahrixon'] },
  { name: 'Buxoro', districts: ['Buxoro sh.', 'G‘ijduvon', 'Kogon', 'Olot', 'Peshku', 'Vobkent'] },
  { name: 'Farg‘ona', districts: ['Farg‘ona sh.', 'Marg‘ilon', 'Quva', 'Qo‘qon', 'Rishton', 'Oltiariq'] },
  { name: 'Jizzax', districts: ['Jizzax sh.', 'Do‘stlik', 'G‘allaorol', 'Zomin', 'Sharof Rashidov'] },
  { name: 'Namangan', districts: ['Namangan sh.', 'Chust', 'Kosonsoy', 'Pop', 'To‘raqo‘rg‘on', 'Uychi'] },
...
