...
      </Screen>
    );
  }

  return (
    <Screen>
      <SectionHeader title="Kirish himoyasi" />

      <Card>
        <View style={[layout.rowBetween]}>
          <View style={[layout.row, { flex: 1, gap: spacing.lg }]}>
            <View style={styles.icon}>
              <MaterialCommunityIcons
...
